# Todo-App

./: .gitignore  Cargo.toml  README.md  config.toml  index.html  login.html  pyproject.toml  tsconfig.json
dbschema/: default.esdl
scripts/: login.ts
src/: app.rs  main.rs
src/pages/: account.rs  login.rs  logout.rs  mod.rs  register.rs  todos.rs
static/: style.css
templates/: base.html  login.html  todos.html
todo_app/: __main__.py  app.py
todo_app/routes/: modify_todos.py  todos.py
todo_app/routes/accounts/: account.py  create_account.py  login.py
todo_app/routes/ui/: login.py  todos.py
todo_app/utils/: __init__.py  config.py  id.py  passwords.py  route.py  tokens.py
